Actualizaciones varias de la creacion del pronostico mundial

--- a/TVMaxPolla/web/TVMaxPolla/public/stylesheets/main.css
+++ b/TVMaxPolla/web/TVMaxPolla/public/stylesheets/main.css
@@ -1,27 +1,38 @@
 
 @media (max-width: 767px) { 	
 	#keys {display:none;} 
-	.team-name {display:none;}
-	.date {text-align: center;}	
+	.name {display:none;}
+	.date {text-align: center;}
+	.venue {background-color: #FFFFFF; height: auto; padding: 5px;}
+	.game {height:auto; padding:5px}	
 }
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) { 	
 	#keys {display:none;} 
-	.team-name {display:inline;}
+	.name {display:inline;}
 	.date {text-align: center;}
+	.venue {background-color: #FFFFFF; height: auto; padding: 5px;}
+	.game {height:auto; padding:5px}
 }
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) { 	
 	#keys {display:block; }
-	.team-name {display:inline;} 	
+	.name {display:inline;} 	
 	.date {text-align: left;}
+	.venue {background-color: #FFFFFF; height: 57px; padding: 5px;}
+	.game {height:70px; padding:5px}
 }
 
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) { 		
 	#keys {display:block;}	
-	.team-name {display:inline;}
+	.name {display:inline;}
 	.date {text-align: left;}
+	.venue { background-color: #FFFFFF; height: 57px; padding: 5px;}
+	.game {height:70px; padding:5px}
+	
+	
 }
+
