--- a/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/index.scala.html
@@ -11,11 +11,13 @@
 					@if(p == 6) { 
 						
 						<div class="row">	
-							<div class="col-md-6">
-								<div class="content-flag-score" data-alt="-" data-index="@game.getTeamA().getName()" style="margin: 0 auto;" >-</div>																	
+							<div class="col-md-6 left">
+								<div class="content-flag-score" data-alt="-" data-index="@game.getTeamA().getName()" style="margin: 0 auto;" >-</div>
+								<div class="llave"></div>																	
 							</div>
-							<div class="col-md-6">
-								<div class="content-flag-score" data-alt="-" data-index="@game.getTeamB().getName()" style="margin: 0 auto;">-</div>	
+							<div class="col-md-6 right">
+								<div class="content-flag-score" data-alt="-" data-index="@game.getTeamB().getName()" style="margin: 0 auto;">-</div>
+								<div class="llave"></div>	
 							</div>        
 						</div>
 						
@@ -23,23 +25,37 @@
 					
 					
 						@if(((index%i) == ga) || ((index%i) == gb)) {				 	
-						 	<ul>					 		
-								<!--li data-index="@game.getTeamA().getName()" data-phase="@p">@game.getTeamA().getName()</li>
-								<li data-index="@game.getTeamB().getName()" data-phase="@p">@game.getTeamB().getName()</li-->
+						 	<ul >					 		
 								
 								 @if(p == 2) {
-									<li><div class="content-flag-score" data-alt="@game.getTeamA().getName()" data-index="@game.getTeamA().getName()" >@game.getTeamA().getName()</div></li>
-									<li><div class="content-flag-score" data-alt="@game.getTeamB().getName()" data-index="@game.getTeamB().getName()" >@game.getTeamB().getName()</div></li>									 	
+									<li>
+										<div class="content-flag-score" data-alt="@game.getTeamA().getName()" data-index="@game.getTeamA().getName()" >@game.getTeamA().getName()</div>										
+									</li>
+									<li>
+										<div class="content-flag-score" data-alt="@game.getTeamB().getName()" data-index="@game.getTeamB().getName()" >@game.getTeamB().getName()</div>										
+									</li>									 	
 								} 
 								 
 								@if(p == 3) {								 
-								 	<li style="margin-bottom: 70px;"><div class="content-flag-score" data-alt="-" data-index="@game.getTeamA().getName()" >-</div></li>
-									<li style="margin-bottom: 70px;"><div class="content-flag-score" data-alt="-" data-index="@game.getTeamB().getName()" >-</div></li>
+								 	<li >
+								 		<div class="content-flag-score" data-alt="-" data-index="@game.getTeamA().getName()" >-</div>
+								 		<div class="llave"></div>
+								 	</li>
+									<li >
+										<div class="content-flag-score" data-alt="-" data-index="@game.getTeamB().getName()" >-</div>
+										<div class="llave"></div>
+									</li>
 								}
 								
 							 	@if(p == 4) {								 	
-								 	<li style="margin-bottom: 200px;"><div class="content-flag-score" data-alt="-" data-index="@game.getTeamA().getName()" >-</div></li>
-									<li style="margin-bottom: 200px;"><div class="content-flag-score" data-alt="-" data-index="@game.getTeamB().getName()" >-</div></li>
+								 	<li>
+								 		<div class="content-flag-score" data-alt="-" data-index="@game.getTeamA().getName()" >-</div>
+								 		<div class="llave"></div>
+									</li>								 		
+									<li>
+										<div class="content-flag-score" data-alt="-" data-index="@game.getTeamB().getName()" >-</div>
+										<div class="llave"></div>
+									</li>
 								}
 
 							</ul>
@@ -63,40 +79,35 @@
 
 @main("La polla de TVMax - FiFA World Cup Brasil 2014") {
 
-	<script>
-		var arrPhase = [];
-		var arrGroup = [];
-		var arrGame	= [];
-		var arrTeamGame = [];
-		var arrTeam	= [];
-		var arrDataTeam	= [];
-	</script>
 	
-	<div class="container">
-
-		<div class="row">
-			<div class="col-md-12">
-				<div class="btn-group">
-					<button id="hola" type="button" class="btn btn-default">HOLA</button>
-					<button id="save" type="button" class="btn btn-default">SAVE</button>
-				</div>
-			</div>
-		</div>
-
-		<div class="row">	
-			<div class="col-md-12">
-				<div class="btn-group">
-					@for(phase <- phases) {
+	
+		<div class="row" style="padding: 0; margin:15px 0;">
+			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-8" >
+				<div class="row">
+					@for(phase <- phases) {			
 						@if(phase.getIdPhase() != 5) {
-							<button data-phase="@phase.getIdPhase()" type="button" class="btn btn-default menu  @("hidden".when(phase.getIdPhase() != 1))">@phase.getName()</button>
-														
-						}
-					}				  					
-  				</div>							
-			</div>    
+							<div class="col-xs-12 col-sm-12 col-md-8 col-lg-2" style=" padding:0; padding-right:2px; text-align: left; width:auto;" >
+								@if(phase.getIdPhase() == 1) {
+									<span data-phase="@phase.getIdPhase()" class="menu phase on @("hidden".when(phase.getIdPhase() != 1))" >@phase.getName()</span>
+								} else {
+									<span data-phase="@phase.getIdPhase()" class="menu phase @("hidden".when(phase.getIdPhase() != 1))"  >@phase.getName()</span>	
+								}
+							</div>			
+						}			
+					}
+					
+					
+					
+				
+				</div>	
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4" style="text-align: right;" >
+				<span id="save" class="menu phase" >GUARDAR</span>
+			</div>
+			
 		</div>
 				
- 		
+ 	
 		<!-- <phase> -->
 		@for(phase <- phases) {
 			
@@ -123,7 +134,7 @@
 									<span>Grupos </span>
 									@if(phase.getIdPhase() == 1) {
 										@for(group <- phase.getMatchGroup()) {
-											<span data-group="@group.getIdGroup()" class="menu @("on".when(group.getIdGroup() == 1))" >@group.getName()</span>	
+											<span data-group="@group.getIdGroup()" class="menu group @("on".when(group.getIdGroup() == 1))" >@group.getName()</span>	
 										}	
 									} else {
 										
@@ -201,7 +212,7 @@
 																	
 													<div class="row" style="text-align: center;" >
 													
-														<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 team" data-team="@game.getTeamA().getIdTeam()" >															
+														<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 team" data-team="@game.getTeamA().getIdTeam()" >															
 															<div class="row" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 " >
 																	<img class="arrow up" src="@routes.Assets.at("images/up.png")" />
@@ -216,8 +227,10 @@
 																</div>
 															</div>
 														</div>
-							
-														<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 team" data-team="@game.getTeamB().getIdTeam()">														
+														<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style=" padding: 5px;">
+															<div style="background-color:#999999; width:1px; height: 50px; margin: 0 auto; "></div>
+														</div>
+														<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 team" data-team="@game.getTeamB().getIdTeam()">														
 															<div class="row" >
 																<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 " >
 																	<img class="arrow up" src="@routes.Assets.at("images/up.png")" />
@@ -295,11 +308,12 @@
 								<div class="row" style=" padding: 5px;">
 						}
 
-						<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3" style="background: url(@routes.Assets.at("images/arrows/" + group.getName() + ".png")) no-repeat left; center; " >
+						<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3"  >
 							<div style="padding: 0px; margin-left:10px;">							
 								<div data-group="@group.getIdGroup()" data-position="0" data-index="@group.getName()1" class="content-flag-score">@group.getName()1</div>	
 								<div data-group="@group.getIdGroup()" data-position="1" data-index="@group.getName()2" class="content-flag-score">@group.getName()2</div>	
 							</div>
+							<div style="position: absolute; top: 10px; left:0px; width:39px; height: 122px;  background: url(@routes.Assets.at("images/arrows/" + group.getName() + ".png")) no-repeat left center;"></div>
 						</div>
 												
 						@if((index%4) == 3) {
@@ -316,62 +330,45 @@
 		}
 
 
-		
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	<div id="keys" class="row"   >
+	<div id="brackets" class="row">
 		<div class="col-md-4">			
-			<div class="row" >
+			<div class="row left">
 				
-				<div class="col-md-4" >
+				<div class="col-md-4 round-16" >
+					<h4 style="text-align:center; color:#FFFFFF;" >Octavos</h4>
 					@getGamePhase(2,4,0,1) 		
 				</div>
-				
-				
 
-				
-				<div class="col-md-4" style="margin-top: 35px;">
+				<div class="col-md-4 quarter-finals">
+					<h4 style="text-align:center; color:#FFFFFF" >Cuartos</h4>
 					@getGamePhase(3,4,0,1)
 				</div>
 				
 				
-				<div class="col-md-4" >
+				<div class="col-md-4 semi-finals">
+					<h4 style="text-align:center; color:#FFFFFF" >Semifinal</h4>
 					@getGamePhase(4,2,0,0)									
 				</div>
 				
 			</div>
 		</div>
 		
-		<div class="col-md-4">			
+		<div class="col-md-4">
+						
 			<div class="row" >				
-				<div class="col-md-12" style="margin-top: 100px; margin-bottom: 75px;">					
+				<div class="col-md-12 final">
+					<h3 style="text-align:center; color:#FFFFFF;" >Campeón</h3>					
 					<ul>
 						<li>
 							<div class="content-flag-score" data-alt="GANADOR!" data-index="WIN" style="margin: 0 auto;" >GANADOR!</div>
+							<div class="llave"></div>
 						</li>
-					</ul>
-					
-				</div>
-								
+					</ul>					
+				</div>							
 			</div>
 			
 			<div class="row">				
-				<div class="col-md-12">
+				<div class="col-md-12 finalists">
 					@getGamePhase(6,1,0,0)
 				</div>
 			</div>
@@ -380,17 +377,20 @@
 		<div class="col-md-4">
 					
 					
-			<div class="row" >
+			<div class="row right">
 
-				<div class="col-md-4" style="margin-top: 100px;">
+				<div class="col-md-4 semi-finals"   >
+					<h4 style="text-align:center; color:#FFFFFF" >Semifinal</h4>
 					@getGamePhase(4,2,1,1)
 				</div>
 				
-				<div class="col-md-4" style="margin-top: 35px;">					
+				<div class="col-md-4 quarter-finals"  >
+					<h4 style="text-align:center; color:#FFFFFF" >Cuartos</h4>					
 					@getGamePhase(3,4,2,3)
 				</div>
 				
-				<div class="col-md-4">
+				<div class="col-md-4 round-16"  >
+					<h4 style="text-align:center; color:#FFFFFF" >Octavos</h4>
 					@getGamePhase(2,4,2,3) 	
 				</div>
 				
@@ -398,8 +398,6 @@
 			</div>	
 		</div>
 	
-					
-	</div>
-	
+
 
 }
