--- a/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
+++ b/TVMaxPolla/web/TVMaxPolla/app/views/main.scala.html
@@ -27,30 +27,64 @@
         	html {font-size:62.5%;} 	
         	body{font-family: Arial, Helvetica, sans-serif;}
         	
-        	
-			
+
 			img.flag {width:67px; height:45px; vertical-align: middle;}
-
-
 			img.arrow{width:11px; height:8px;  cursor: pointer; }
-
 			
+			#brackets {background: url(@routes.Assets.at("images/fondoEsquema.jpg")) left top repeat; height: 670px; }
+			
+			#brackets .left .content-flag-score { margin: 0 auto;}
+			#brackets .right .content-flag-score { margin: 0 auto;}
+			
+			#brackets .round-16 {margin-top: 0px; }
+			#brackets .quarter-finals {margin-top: 43px; overflow: visible; height:auto;   }
+			#brackets .semi-finals  {margin-top: 130px; overflow: visible; height:auto; }			
+			#brackets .final  {margin-top: 115px; margin-bottom: 100px;}
+			
+			#brackets .round-16 li {margin-top: 0px; margin-bottom: 10px;}
+			#brackets .quarter-finals li {position:relative;  margin-top: 0px; margin-bottom: 90px;}
+			#brackets .semi-finals li {position:relative;  margin-top: 0px; margin-bottom: 247px;}			
 
-			#keys {background-color: #186198; max-height: 550px; }
+
+			#brackets .left .quarter-finals li .llave { overflow:visible; position:absolute;  bottom:-15px; left:-25px; width:50px; height:91px;  background: url(@routes.Assets.at("images/brackets/right/small.png")) no-repeat left center; }
+			#brackets .left .semi-finals li .llave { overflow:visible; position:absolute;  bottom:-40px; left:-30px; width:70px; height:151px;  background: url(@routes.Assets.at("images/brackets/right/medium.png")) no-repeat left center; }
+			#brackets .finalists .left .llave { overflow:visible; position:absolute;  bottom:-130px; left:-12px; width:70px; height:330px;  background: url(@routes.Assets.at("images/brackets/right/large.png")) no-repeat left center; }
+			
+			#brackets .right .quarter-finals li .llave { overflow:visible; position:absolute;  bottom:-15px; left:105px; width:50px; height:91px;  background: url(@routes.Assets.at("images/brackets/left/small.png")) no-repeat left center; }
+			#brackets .right .semi-finals li .llave { overflow:visible; position:absolute;  bottom:-40px; left:100px; width:70px; height:151px;  background: url(@routes.Assets.at("images/brackets/left/medium.png")) no-repeat left center; }
+			#brackets .finalists .right .llave { overflow:visible; position:absolute;  bottom:-130px; left:165px; width:70px; height:330px;  background: url(@routes.Assets.at("images/brackets/left/large.png")) no-repeat left center; }
+			
+			
+			#brackets .final li .llave{overflow:visible; position:absolute;  bottom:-70px; left:96px; width:204px; height:46px;  background: url(@routes.Assets.at("images/brackets/win.png")) no-repeat center top; }
 			
 			
 			.menu, .calcular{cursor:pointer; }
-			.menu:hover{color:#ffe85c}
-			.menu.on{color:#ffe85c}
+			.menu.group:hover{color:#ffe85c}
+			.menu.group.on{color:#ffe85c}
 			
 			.hidden {visibility:hidden;}
 			
+			.menu.phase{padding:10px; background-color:#E2EBF9; color:#C4C8D3; font-weight: bold;}
+
+			.menu.phase:hover{background-color:#BEC5DF; color:#ffffff;}
+			.menu.phase[data-phase="1"].on{background-color:#BAC6DD; color:#ffffff;}
+			.menu.phase[data-phase="2"].on{background-color:#8F9FC0; color:#ffffff;}
+			.menu.phase[data-phase="3"].on{background-color:#64789C; color:#ffffff;}
+			.menu.phase[data-phase="4"].on{background-color:#455D86; color:#ffffff;}
+			.menu.phase[data-phase="6"].on{background-color:#314972; color:#ffffff;}
 			
-			.content-flag-score {width: 75px; min-height: 60px; text-align: center; padding: 5px; background-color: #ececef; -moz-box-shadow: 3px 3px rgba(214,214,216,0.7); -webkit-box-shadow: 3px 3px rgba(214,214,216,0.7); box-shadow: 3px 3px rgba(214,214,216,0.7); font-size:xx-small; font-weight:bold;  }
+			
+			#save {background-color:#f1e916; color:#999999;}
+			#save:hover{padding:10px; background-color:#BEC5DF; color:#ffffff;}
+			
+			
+			.content-flag-score {width: 75px; min-height: 60px; text-align: center; padding: 5px; background-color: #ececef; -moz-box-shadow: 3px 3px rgba(214,214,216,0.7); -webkit-box-shadow: 3px 3px rgba(214,214,216,0.7); box-shadow: 3px 3px rgba(214,214,216,0.7); font-size:xx-small; font-weight:bold; }
 			.content-flag-score:last-child{margin:5px 0 5px 0;}			
 			.content-flag-score.on {background-color:#bababb;  -moz-box-shadow: 3px 3px rgba(226,226,229,0.7); -webkit-box-shadow: 3px 3px rgba(226,226,229,0.7); box-shadow: 3px 3px rgba(226,226,229,0.7); text-align: center;}			
 			.content-flag-score.on img.flag {width:75%;}
 			
+			
+		
 			.goal {text-align:center;}
 			
 			ul,li {padding:0; margin:0; border:0; list-style:none outside none; text-align:center;}
@@ -203,6 +237,7 @@
 					var _group = $.fgetGroupActive();
 					_group.classified = [];
 					firts = _group.team;
+
 
 					for (var i = 0; i < 2; i++ ) {
 																
@@ -774,7 +809,7 @@
 
 					});
 					
-					if (_phase == 1) {			
+					if (_phase == 1) {									
 						$.fUpdateStandingGroup2();
 						$.fUpdateStandingPhase22();						
 					} else {
@@ -804,61 +839,71 @@
 					}
 
 				});				
-				
-				
-				
-				
-				
-				
-				
-				
-				
-				
-				$(document).on('click','.menu[data-phase]', function() {
-					
 
-					var _this = $(this);
-					var _phase = $(this).data('phase');
-					
-					
-					$.each(arrPhase, function( index, phase ) {						
-						phase.active = false;						
-						if (phase.id == _phase) {
-							phase.active = true;							
-							$('.phase[data-phase="'+_phase+'"]').removeClass('hidden');													
-							if (phase.id != 1) {
-								$('.phase[data-phase="'+_phase+'"] .group').removeClass('hidden');	
-							}
-						} else {
-							$('.phase[data-phase="'+phase.id+'"]').addClass('hidden');							
-						}
-					});
-					
-				});
-				
-				$(document).on('click','.menu[data-group]', function() {
-					
-					var _this = $(this); 
-					var selectorgroup  = 'div[data-group="'+$(this).data('group')+'"]';
-					$('.menu').removeClass('on');
-					$(this).addClass('on');	
-					$('.name-group').html($(this).html());
-					$('.calcular').data('group',$(this).data('group')); 
-					$('.group[data-group]').addClass('hidden');
-					$(selectorgroup).removeClass('hidden');
 
-					$.each(arrPhase, function( index,phase) {
-						if (phase.active) {
-							$.each(phase.group, function( index, group ) {
+
+			$(document).on('click','.menu[data-phase]', function() {
+				
+				var _this = $(this);
+				var _phase = $(this).data('phase');
+
+				$('.menu.phase').removeClass('on');				
+				$('.menu.phase[data-phase="'+_phase+'"]').addClass('on');
+				$('.row.phase').addClass('hidden');
+				$('.row.phase[data-phase="'+_phase+'"]').removeClass('hidden');
+				$('.row.phase[data-phase="'+_phase+'"] .group').addClass('hidden');
+				
+				if (_phase == 1) {						
+					$('.menu.group').removeClass('hidden');
+					$('.row.phase[data-phase="'+_phase+'"] .group[data-group="1"]').removeClass('hidden');
+					$('.menu.group[data-group="1"]').addClass('on');						
+				} else {
+					$('.row.phase[data-phase="'+_phase+'"] .group').removeClass('hidden');
+				}
+				
+				$.each(arrPhase, function(index,phase) {
+					phase.active = false;
+					if (phase.id == _phase) {
+						
+						phase.active = true;
+						
+						if (_phase == 1) {
+							$.each(phase.group, function(index,group) {
 								group.active = false;
-								if (group.id== _this.data('group')) {
+								if (group.id == 1) {
 									group.active = true;	
 								}
-							});
-						}
-					});
-
+							});	
+						}	
+						
+						
+					}
 				});
+				
+			});
+			
+			$(document).on('click','.menu[data-group]', function() {
+				
+				var _this = $(this); 
+				var _group = $(this).data('group');
+				
+				$('.menu.group').removeClass('on');
+				$('.menu.group[data-group="'+_group+'"]').addClass('on');
+				$('.row.group').addClass('hidden');
+				$('.row.group[data-group="'+_group+'"]').removeClass('hidden');
+				
+				$.each(arrPhase, function(index,phase) {
+					if (phase.active) {
+						$.each(phase.group, function(index,group) {
+							group.active = false;
+							if (group.id == _group) {
+								group.active = true;	
+							}
+						});
+					}
+				});
+				
+			});
 
 
 
@@ -874,8 +919,7 @@
 							
 							
 							$.each(phase.group, function(index, group) {
-								
-								
+
 								group.active = true;
 								$.each(group.game, function( index, game ) {
 															
@@ -925,13 +969,6 @@
 							});
 							
 							
-
-						
-							
-						
-						
-						
-						
 						
 					});
 
@@ -944,18 +981,32 @@
 
 
 				$( document ).ready(function() {
-					$.fgetUpdate();
 					
+					$.fgetUpdate();					
 					$.fUpdateStandingPhase22();
-					
-					
-					$.each(arrPhase, function( index,phase) {						
-							var _total = 0;				
-							$.each(phase.group, function( index,group) {
-								_total += group.classified.length;
-							});								
+				
+					$.each(arrPhase, function( index,phase) {
 						
-						alert(_total);
+							
+						
+						
+												
+						var _total = 0;				
+						$.each(phase.group, function( index,group) {
+							
+							if (phase.id == 1) {							
+								group.active = false;
+								if (group.id == 1) {
+									group.active = true;	
+								}						
+							}
+							
+							
+							
+							_total += group.classified.length;
+						});								
+						
+						
 						if ((phase.id == 1) && (_total == 16)) {
 							$('.menu[data-phase="'+arrPhase[phase.id].id+'"]').removeClass('hidden');																		
 						} else if ((phase.id == 2) && (_total == 8)) {						
@@ -990,6 +1041,122 @@
         
     </head>
     <body>
-		@content
+
+		<div id="fb-root"></div>
+		
+		<script>
+		
+			window.fbAsyncInit = function() {
+		  	
+				FB.init({
+					appId      : '647787605309095',
+					status     : true, // check login status
+					cookie     : true, // enable cookies to allow the server to access the session
+					xfbml      : true  // parse XFBML
+				});
+		
+				// Here we subscribe to the auth.authResponseChange JavaScript event. This event is fired
+				// for any authentication related change, such as login, logout or session refresh. This means that
+				// whenever someone who was previously logged out tries to log in again, the correct case below 
+				// will be handled. 
+			  	FB.Event.subscribe('auth.authResponseChange', function(response) {
+			    	// Here we specify what we do with the response anytime this event occurs. 
+				    if (response.status === 'connected') {
+				      // The response object is returned with a status field that lets the app know the current
+				      // login status of the person. In this case, we're handling the situation where they 
+				      // have logged in to the app.
+				      testAPI();
+				    } else if (response.status === 'not_authorized') {
+				      // In this case, the person is logged into Facebook, but not into the app, so we call
+				      // FB.login() to prompt them to do so. 
+				      // In real-life usage, you wouldn't want to immediately prompt someone to login 
+				      // like this, for two reasons:
+				      // (1) JavaScript created popup windows are blocked by most browsers unless they 
+				      // result from direct interaction from people using the app (such as a mouse click)
+				      // (2) it is a bad experience to be continually prompted to login upon page load.
+				      FB.login();
+				    } else {
+				      // In this case, the person is not logged into Facebook, so we call the login() 
+				      // function to prompt them to do so. Note that at this stage there is no indication
+				      // of whether they are logged into the app. If they aren't then they'll see the Login
+				      // dialog right after they log in to Facebook. 
+				      // The same caveats as above apply to the FB.login() call here.
+				      FB.login();
+				    }
+			  	});
+			};
+		
+			// Load the SDK asynchronously
+			(function(d){
+				var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
+			   	if (d.getElementById(id)) {return;}
+			   	js = d.createElement('script'); js.id = id; js.async = true;
+			   	js.src = "//connect.facebook.net/en_US/all.js";
+			   	ref.parentNode.insertBefore(js, ref);
+			  }(document));
+		
+			  // Here we run a very simple test of the Graph API after login is successful. 
+			  // This testAPI() function is only called in those cases. 
+			  function testAPI() {
+		  	
+					console.log('Welcome!  Fetching your information.... ');
+		    
+				    FB.api('/me?scope=email', function(response) {
+				    	console.log('Good to see you id, ' + response.id + '.');
+				      	console.log('Good to see you name, ' + response.name + '.');
+				      	console.log('Good to see you first_name, ' + response.first_name + '.');
+				      	console.log('Good to see you last_name, ' + response.last_name + '.');
+				      	console.log('Good to see you email, ' + response.email + '.');
+				    });
+		    
+			    	FB.api('/me/friendlists',
+					    function (response) {
+						      if (response && !response.error) {
+						        /* handle the result */
+									console.log('handle the result '+response.data.length);
+						      } 
+					    }
+					);
+
+		  		}
+		</script>
+
+
+		
+			
+    	<script>
+			var arrPhase = [];
+			var arrGroup = [];
+			var arrGame	= [];
+			var arrTeamGame = [];
+			var arrTeam	= [];
+			var arrDataTeam	= [];
+		</script>
+	
+		<div class="container">
+			
+			
+			
+			
+			<div class="row" >
+				<div class="col-md-12" style="background-color:#173069; color:#FFFFFF; font-weight: bold; text-align: left;"  >
+					<span>Regístrate gratis</span>
+				</div>
+			</div>
+			
+			<div class="row" style="padding: 0; margin:15px 0;">
+				<div class="col-md-12" style="padding: 0;" >
+					<fb:login-button show-faces="true" width="200" max-rows="1"></fb:login-button>	
+				</div>
+			</div>
+			
+			
+			@content
+							
+		</div>
+		
+		
+    	
+		
     </body>
 </html>
